--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 00:05:18 2018</p>
+         Last Run: Thu Jul 12 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>12</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -49,8 +49,8 @@
                         <td>34</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>SSE</td>
-                        <td>12</td>
+                        <td>S</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>SE</td>
-                        <td>25</td>
+                        <td>10</td>
+                        <td>SSE</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -73,8 +73,8 @@
                         <td>38</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>29</td>
+                        <td>SSE</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>19</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -216,7 +216,7 @@
                "data":[
                  "35",
                  "34",
-                 "34",
+                 "33",
                  "38",
                  "45"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "12",
-                 "25",
-                 "29",
-                 "19"
+                 "18",
+                 "23",
+                 "24",
+                 "26",
+                 "17"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 00:05:18 2018</p>
+         Last Run: Thu Jul 12 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 00:05:18 2018</p>
+         Last Run: Thu Jul 12 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,19 +510,19 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>SSW</td>
+                        <td>S</td>
                         <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
@@ -548,7 +548,7 @@
                         <td>0</td>
                         <td>37</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSE</td>
                         <td>22</td>
                      </tr>
@@ -558,7 +558,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -690,11 +690,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "48",
+                 "55",
+                 "47",
                  "42",
                  "37",
-                 "34"
+                 "35"
                ]
              },
              {
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 00:05:18 2018</p>
+         Last Run: Thu Jul 12 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -762,9 +762,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>E</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -776,7 +776,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -905,8 +905,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "6",
-                 "12"
+                 "7",
+                 "13"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 00:05:18 2018</p>
+         Last Run: Thu Jul 12 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -945,38 +945,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>15</td>
-                        <td>35</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>37</td>
                         <td>1</td>
                         <td>18</td>
                         <td>ESE</td>
-                        <td>15</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>24</td>
-                        <td>24</td>
-                        <td>12</td>
-                        <td>39</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>18</td>
-                        <td>ESE</td>
-                        <td>26</td>
+                        <td>E</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>12</td>
-                        <td>47</td>
+                        <td>Chance of Rain</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>33</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>30</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -1020,9 +1020,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
                  "24",
-                 "21"
+                 "22",
+                 "20"
                ]
              },
              {
@@ -1031,9 +1031,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
                  "24",
-                 "21"
+                 "22",
+                 "20"
                ]
              }
            ]
@@ -1084,9 +1084,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "12",
-                 "12"
+                 "24",
+                 "24",
+                 "33"
                ]
              },
              {
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "39",
-                 "47"
+                 "37",
+                 "42",
+                 "50"
                ]
              },
              {
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "26",
-                 "30"
+                 "9",
+                 "19",
+                 "40"
                ]
              }
            ]
