--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 02:05:04 2018</p>
+         Last Run: Thu Jul 12 03:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -72,9 +72,9 @@
                         <td>0</td>
                         <td>37</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>26</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -216,7 +216,7 @@
                "data":[
                  "36",
                  "35",
-                 "34",
+                 "33",
                  "37",
                  "44"
                ]
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
+                 "21",
                  "24",
                  "25",
-                 "26",
+                 "24",
                  "18"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 02:05:04 2018</p>
+         Last Run: Thu Jul 12 03:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -288,7 +288,7 @@
                         <td>3</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -312,19 +312,19 @@
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>84</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
                         <td>39</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>80</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -465,10 +465,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "65",
-                 "76",
+                 "75",
                  "79",
-                 "84",
-                 "80"
+                 "81",
+                 "78"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 02:05:04 2018</p>
+         Last Run: Thu Jul 12 03:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -512,21 +512,21 @@
                         <td>0</td>
                         <td>55</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
-                        <td>5</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>10</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -534,11 +534,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>4</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>18</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -548,9 +548,9 @@
                         <td>0</td>
                         <td>38</td>
                         <td>6</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>23</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -560,9 +560,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>7</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>18</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -691,8 +691,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "47",
-                 "42",
+                 "48",
+                 "43",
                  "38",
                  "35"
                ]
@@ -702,11 +702,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "1",
                  "5",
-                 "10",
-                 "18",
-                 "23",
-                 "18"
+                 "11",
+                 "14",
+                 "12"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 02:05:04 2018</p>
+         Last Run: Thu Jul 12 03:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -745,10 +745,10 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -757,10 +757,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
@@ -772,11 +772,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -820,8 +820,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "27",
                  "26",
-                 "25",
                  "24"
                ]
              },
@@ -831,8 +831,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "27",
                  "26",
-                 "25",
                  "24"
                ]
              }
@@ -894,9 +894,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
-                 "31",
-                 "36"
+                 "27",
+                 "30",
+                 "35"
                ]
              },
              {
@@ -906,7 +906,7 @@
                "data":[
                  "4",
                  "7",
-                 "13"
+                 "12"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 02:05:04 2018</p>
+         Last Run: Thu Jul 12 03:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -951,31 +951,31 @@
                         <td>37</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>ESE</td>
-                        <td>11</td>
+                        <td>E</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>24</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>30</td>
                         <td>43</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>22</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>37</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>ESE</td>
+                        <td>E</td>
                         <td>50</td>
                      </tr>
                   </tbody>
@@ -1021,8 +1021,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "24",
-                 "22",
-                 "20"
+                 "23",
+                 "21"
                ]
              },
              {
@@ -1032,8 +1032,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "24",
-                 "22",
-                 "20"
+                 "23",
+                 "21"
                ]
              }
            ]
@@ -1085,7 +1085,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "24",
+                 "30",
                  "37"
                ]
              },
@@ -1096,7 +1096,7 @@
                "data":[
                  "37",
                  "43",
-                 "51"
+                 "50"
                ]
              },
              {
@@ -1104,8 +1104,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "22",
+                 "23",
+                 "35",
                  "50"
                ]
              }
